[package]
name = "PluginProxy-Transpiler-roblox"
version = "0.1.0"
edition = "2021"

[lib]
name="pluginproxy_transpiler"
path="src/lib.rs"

[[bin]]
name = "PluginProxy-Transpiler"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
thiserror = "1"
log = "0.4"
glob-match = "0.2"

rbx_reflection_database = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_reflection = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_dom_weak = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_binary = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_xml = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
full_moon = { version = "1.0.0-rc", features = ["luau"] }

clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
rfd = { version = "0.14", optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package.full_moon]
opt-level = 3 # release optimization for debug to prevent stack overflow

[features]
default = ["luau"]
luau = []
cli = ["clap", "env_logger", "rfd"]